task edition feature finished

--- a/code/employees_mgmt_app/app/templates/edit_task.html
+++ b/code/employees_mgmt_app/app/templates/edit_task.html
@@ -1,69 +1,62 @@
 <!--
  * File: new_task.html
  * Author: Nithujan Jegatheeswaran
- * Brief:
- * Version: ???
+ * Brief: Template used to show the form to edit an existing task
+ * Version: 28.03.2022
  -->
-{% extends 'gabarit.html' %}
+
+{% extends 'header_nav_footer.html' %}
 
 {% block title %}Édition d'une tâche{% endblock title %}
 
 {% block content %}
     <h1 class="mt-4">Modification d'une tâche du mois en cours</h1>
     <ol class="breadcrumb mb-4">
-        <li class="breadcrumb-item active">Édition de la tâche</li>
+        <li class="breadcrumb-item"><a href="{{ url_for('task_list', email=email) }}">Liste des tâches</a></li>
+        <li class="breadcrumb-item active">Édition d'une tâche</li>
     </ol>
     <div class="row">
-        {% if errors %}
-            <div class="col-md-4">
-                <div class="card mb-4">
-                    <div class="card-header text-danger">Erreur/s</div>
-                    <div class="card-body">
-                        {% for error in errors %}
-                            {{ error }} <br>
-                        {% endfor %}
-                    </div>
-                </div>
-            </div>
+        {% if error_list %}
+            {% include 'error_messages.html' %}
         {% endif %}
         <div class="col-md-12">
             <div class="card mb-4">
                 <div class="card-header">Informations sur la tâche</div>
                 <div class="card-body">
-                    <form action="{{ url_for('edit_task') }}" method="post">
+                    <form action="{{ url_for('edit_task', task_id=data.id) }}" method="post" enctype="multipart/form-data">
                         <div class="row">
                             <div class="col-sm-6">
                                 <div class="mb-3">
-                                    <label class="form-label" for="project">Projet</label>
+                                    <label for="project" class="form-label">Projet</label>
                                     <input type="text" id="project" name="project" class="form-control"
-                                           value="{{ data['project'] }}" disabled>
+                                           value="{{ data.project }}" disabled>
                                 </div>
                                 <div class="mb-3">
-                                    <label class="data-label" for="title">Titre</label>
+                                    <label for="title" class="data-label">Titre</label>
                                     <input type="text" id="title" name="title" class="form-control"
-                                           value="{{ data['title'] }}" disabled>
+                                           value="{{ data.title }}" disabled>
                                 </div>
                                 <div class="mb-3">
-                                    <label class="data-label" for="since">Heure de début</label>
+                                    <label for="since" class="data-label">Heure de début</label>
                                     <input type="time" id="since" name="since" class="form-control"
-                                           value="{{ data['since'] }}">
+                                           value="{{ data.since }}">
                                 </div>
                                 <div class="mb-3">
-                                    <label class="data-label" for="until">Heure de fin</label>
+                                    <label for="until" class="data-label">Heure de fin</label>
                                     <input type="time" id="until" name="until" class="form-control"
-                                           value="{{ data['until'] }}">
+                                           value="{{ data.until }}">
                                 </div>
                                 <div class="mb-3">
-                                    <label class="data-label" for="date">Date</label>
+                                    <label for="date" class="data-label">Date</label>
                                     <input type="date" id="date" name="date" class="form-control"
-                                           value="{{ data['date'] }}">
+                                           value="{{ data.date }}">
                                 </div>
                             </div>
                             <div class="col-sm-6">
                                 <div class="mb-3">
-                                    <label class="data-label" for="description">Description</label>
+                                    <label for="description" class="data-label">Description</label>
                                     <textarea id="description" name="description"
-                                              class="form-control">{{ data['description'] }}</textarea>
+                                              class="form-control">{{ data.description }}</textarea>
                                 </div>
                                 <input type="submit" class="form-control bg-dark text-white" value="Valider">
                             </div>
