a lot of refactoring

--- a/code/employees_mgmt_app/app/templates/index.html
+++ b/code/employees_mgmt_app/app/templates/index.html
@@ -15,7 +15,7 @@
     </ol>
     <div class="row">
         <div class="col-md-6">
-            <div class="card mb-3">
+            <div class="card shadow mb-3">
                 <div class="card-header">Données Personnelles</div>
                 <div class="card-body">
                     <div class="row">
@@ -39,7 +39,7 @@
         </div>
 
         <div class="col-md-6">
-            <div class="card mb-4">
+            <div class="card  shadow mb-4">
                 <div class="card-header">Coordonnées</div>
                 <div class="card-body">
                     <div class="row">
@@ -67,7 +67,7 @@
         </div>
 
         <div class="col-md-6">
-            <div class="card mb-4">
+            <div class="card shadow mb-4">
                 <div class="card-header">Données Professionnelles</div>
                 <div class="card-body">
                     <div class="row">
