--- a/code/employees_mgmt_app/app/templates/payslips.html
+++ b/code/employees_mgmt_app/app/templates/payslips.html
@@ -15,7 +15,7 @@
     </ol>
     <div class="row">
         <div class="col-md-12">
-            <div class="card mb-4">
+            <div class="card shadow mb-4">
                 <div class="card-header">Liste complète</div>
                 <div class="card-body">
                     WORK IN PROGRESS
