--- a/code/employees_mgmt_app/app/templates/edit_task.html
+++ b/code/employees_mgmt_app/app/templates/edit_task.html
@@ -5,66 +5,19 @@
  * Version: 28.03.2022
  -->
 
-{% extends 'header_nav_footer.html' %}
+{% extends 'task_form.html' %}
 
-{% block title %}Édition d'une tâche{% endblock title %}
+{% block title %}Mise à jour d'une tâche{% endblock title %}
 
-{% block content %}
-    <h1 class="mt-4">Modification d'une tâche du mois en cours</h1>
-    <ol class="breadcrumb mb-4">
-        <li class="breadcrumb-item"><a href="{{ url_for('task_list', email=email) }}">Liste des tâches</a></li>
-        <li class="breadcrumb-item active">Édition d'une tâche</li>
-    </ol>
-    <div class="row">
-        {% if error_list %}
-            {% include 'error_messages.html' %}
-        {% endif %}
-        <div class="col-md-12">
-            <div class="card mb-4">
-                <div class="card-header">Informations sur la tâche</div>
-                <div class="card-body">
-                    <form action="{{ url_for('edit_task', task_id=data.id) }}" method="post" enctype="multipart/form-data">
-                        <div class="row">
-                            <div class="col-sm-6">
-                                <div class="mb-3">
-                                    <label for="project" class="form-label">Projet</label>
-                                    <input type="text" id="project" name="project" class="form-control"
-                                           value="{{ data.project }}" disabled>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="title" class="data-label">Titre</label>
-                                    <input type="text" id="title" name="title" class="form-control"
-                                           value="{{ data.title }}" disabled>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="since" class="data-label">Heure de début</label>
-                                    <input type="time" id="since" name="since" class="form-control"
-                                           value="{{ data.since }}">
-                                </div>
-                                <div class="mb-3">
-                                    <label for="until" class="data-label">Heure de fin</label>
-                                    <input type="time" id="until" name="until" class="form-control"
-                                           value="{{ data.until }}">
-                                </div>
-                                <div class="mb-3">
-                                    <label for="date" class="data-label">Date</label>
-                                    <input type="date" id="date" name="date" class="form-control"
-                                           value="{{ data.date }}">
-                                </div>
-                            </div>
-                            <div class="col-sm-6">
-                                <div class="mb-3">
-                                    <label for="description" class="data-label">Description</label>
-                                    <textarea id="description" name="description"
-                                              class="form-control">{{ data.description }}</textarea>
-                                </div>
-                                <input type="submit" class="form-control bg-dark text-white" value="Valider">
-                            </div>
+{% block h1 %}Modification d'une tâche du mois en cours{% endblock h1 %}
 
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-{% endblock content %}
+{% block breadcrumb_list %}
+    <li class="breadcrumb-item"><a href="{{ url_for('task_list', email=email) }}">Liste des tâches</a></li>
+    <li class="breadcrumb-item active">Mise à jour d'une tâche</li>
+{% endblock breadcrumb_list %}
+
+{% block form_action %}{{ url_for('edit_task', task_id=task_id) }}{% endblock form_action %}
+
+{% block disabled %}disabled{% endblock disabled %}
+
+{% block button_value %}Modifier{% endblock button_value %}
