--- a/code/employees_mgmt_app/app/templates/employee_list.html
+++ b/code/employees_mgmt_app/app/templates/employee_list.html
@@ -16,7 +16,7 @@
     </ol>
     <div class="row">
         <div class="col-md-12">
-            <div class="card mb-4">
+            <div class="card shadow mb-4">
                 <div class="card-header">Liste complète des employés</div>
                 <div class="card-body">
                     <table id="datatablesSimple">
