--- a/code/employees_mgmt_app/app/templates/login.html
+++ b/code/employees_mgmt_app/app/templates/login.html
@@ -26,7 +26,7 @@
                         <div class="card shadow-lg border-0 rounded-lg mt-5">
                             <div class="card-header"><h3 class="text-center font-weight-light my-4">Login</h3></div>
                             <div class="card-body">
-                                <form method="post" action="http://localhost:5000/login/">
+                                <form method="post" action="{{ url_for('login') }}" enctype="multipart/form-data">
                                     <div class="form-floating mb-3">
                                         <input class="form-control" id="email" type="email" name="email"
                                                placeholder="name@example.com"/>
@@ -52,7 +52,7 @@
         <footer class="py-4 bg-light mt-auto">
             <div class="container-fluid px-4">
                 <div class="d-flex align-items-center justify-content-between small">
-                    <div class="text-muted">Copyright &copy; Your Website 2021</div>
+                    <div class="text-muted">Copyright &copy; Your Website 2022</div>
                     <div>
                         <a href="#">Privacy Policy</a>
                         &middot;
