--- a/code/employees_mgmt_app/app/templates/task_list.html
+++ b/code/employees_mgmt_app/app/templates/task_list.html
@@ -15,7 +15,7 @@
     </ol>
     <div class="row">
         <div class="col-md-12">
-            <div class="card mb-4">
+            <div class="card shadow mb-4">
                 <div class="card-header">Tâches effectuées durant ce mois</div>
                 <div class="card-body">
                     <table id="datatablesSimple" class="table table-striped">
