--- a/code/employees_mgmt_app/app/templates/new_task.html
+++ b/code/employees_mgmt_app/app/templates/new_task.html
@@ -12,9 +12,9 @@
 {% block h1 %}Ajouter une nouvelle tâche terminée{% endblock h1 %}
 
 {% block breadcrumb_list %}
-    <li class="breadcrumb-item active">Nouvel/le employé/e</li>
+    <li class="breadcrumb-item active">Nouvelle tâche</li>
 {% endblock breadcrumb_list %}
 
 {% block form_action %}{{ url_for('new_task') }}{% endblock form_action %}
 
-{% block button_value %}Modifier{% endblock button_value %}
+{% block button_value %}Ajouter{% endblock button_value %}
