--- a/code/employees_mgmt_app/app/templates/edit_task.html
+++ b/code/employees_mgmt_app/app/templates/edit_task.html
@@ -1,9 +1,9 @@
-<!--
- * File: new_task.html
- * Author: Nithujan Jegatheeswaran
- * Brief: Template used to show the form to edit an existing task
- * Version: 28.03.2022
- -->
+{#
+ # File: new_task.html
+ # Author: Nithujan Jegatheeswaran
+ # Brief: Template used to show the form to edit an existing task
+ # Version: 30.03.2022
+ #}
 
 {% extends 'task_form.html' %}
 
