--- a/code/employees_mgmt_app/app/templates/error_messages.html
+++ b/code/employees_mgmt_app/app/templates/error_messages.html
@@ -1,9 +1,9 @@
-<!--
- * File: error_messages.html
- * Author: Nithujan Jegatheeswaran
- * Brief: Template containing the bootstrap `col` element used to display error messages in html file with a form
- * Version: 28.03.2022
- -->
+{#
+ # File: error_messages.html
+ # Author: Nithujan Jegatheeswaran
+ # Brief: Template containing the bootstrap `col` class element used to display error messages in html file with a form
+ # Version: 30.03.2022
+ #}
 
 {% block error_messages %}
     <div class="col-xl-12">
