--- a/code/employees_mgmt_app/app/templates/header_nav_footer.html
+++ b/code/employees_mgmt_app/app/templates/header_nav_footer.html
@@ -1,9 +1,10 @@
-<!--
- * File: header_nav_footer.html
- * Author: Nithujan Jegatheeswaran
- * Brief: Main template containing the website's header, navigation bar and footer
- * Version: 28.03.2022
- -->
+{#
+ # File: header_nav_footer.html
+ # Author: Nithujan Jegatheeswaran
+ # Brief: Major template containing the website's header, navigation bar and footer, used by almost every other
+        templates
+ # Version: 30.03.2022
+ #}
 
 <!DOCTYPE html>
 <html lang="fr">
