--- a/code/employees_mgmt_app/app/templates/index.html
+++ b/code/employees_mgmt_app/app/templates/index.html
@@ -1,9 +1,9 @@
-<!--
- * File: index.html
- * Author: Nithujan Jegatheeswaran
- * Brief: Template used to display the profil page main content
- * Version: 28.03.22
- -->
+{#
+ # File: index.html
+ # Author: Nithujan Jegatheeswaran
+ # Brief: Template used to display the profil page's main content
+ # Version: 30.03.2022
+ #}
 {% extends 'header_nav_footer.html' %}
 
 {% block title %}Index{% endblock title %}
