--- a/code/employees_mgmt_app/app/templates/login.html
+++ b/code/employees_mgmt_app/app/templates/login.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<!--
- * File: login.html
- * Author: Nithujan Jegatheeswaran
- * Brief:
- * Version: 22.03.2022
- -->
+{#
+ # File: login.html
+ # Author: Nithujan Jegatheeswaran
+ # Brief: Template used to show the login page of the website
+ # Version: 30.03.2022
+ #}
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
