--- a/code/employees_mgmt_app/app/templates/payslips.html
+++ b/code/employees_mgmt_app/app/templates/payslips.html
@@ -1,9 +1,9 @@
-<!--
- * File: payslips.html
- * Author: Nithujan Jegatheeswaran
- * Brief: Template used to display the payslip list
- * Version: 28.03.2022
- -->
+{#
+ # File: payslips.html
+ # Author: Nithujan Jegatheeswaran
+ # Brief: Template used to display the payslip list
+ # Version: 30.03.2022
+ #}
 {% extends 'header_nav_footer.html' %}
 
 {% block title %}Fiches de salaire{% endblock title %}
@@ -16,7 +16,7 @@
     <div class="row">
         <div class="col-md-12">
             <div class="card shadow mb-4">
-                <div class="card-header">Liste complète</div>
+                <div class="card-header">Liste complète des fiches de salaires</div>
                 <div class="card-body">
                     WORK IN PROGRESS
 {#                    <table>#}
