--- a/code/employees_mgmt_app/app/templates/edit_employee.html
+++ b/code/employees_mgmt_app/app/templates/edit_employee.html
@@ -1,9 +1,9 @@
-<!--
- * File: edit_employee.html
- * Author: Nithujan Jegatheeswaran
- * Brief:
- * Version: 29.03.2022
- -->
+{#
+ # File: edit_employee.html
+ # Author: Nithujan Jegatheeswaran
+ # Brief: Specific
+ # Version: 30.03.2022
+ #}
 
 {% extends 'employee_form.html' %}
 
