--- a/code/employees_mgmt_app/app/templates/task_form.html
+++ b/code/employees_mgmt_app/app/templates/task_form.html
@@ -1,9 +1,9 @@
-<!--
- * File: task_form.html
- * Author: Nithujan Jegatheeswaran
- * Brief:
- * Version: 29.03.2022
- -->
+{#
+ # File: task_form.html
+ # Author: Nithujan Jegatheeswaran
+ # Brief: Template containing the form to add or update a task
+ # Version: 30.03.2022
+ #}
 
 {% extends 'header_nav_footer.html' %}
 
@@ -28,40 +28,39 @@
                                     <label for="project" class="form-label">Projet</label>
                                     <input type="text" id="project" name="project" class="form-control"
                                             {% if data %} value="{{ data.project }}" {% endif %}
-                                           {% if is_disabled %}disabled{% endif %}>
+                                           {% if is_readonly %}readonly{% endif %} >
                                 </div>
                                 <div class="mb-3">
                                     <label for="title" class="form-label">Titre</label>
                                     <input type="text" id="title" name="title" class="form-control"
                                             {% if data %}
                                            value="{{ data.title }}" {% endif %}
-                                           {% if is_disabled %}disabled{% endif %}>
+                                           {% if is_readonly %}readonly{% endif %}>
                                 </div>
                                 <div class="mb-3">
-                                    <label for="since" class="form-label">Heure de début</label>
-                                    <input type="time" id="since" name="since" class="form-control"
-                                            {% if since %}
-                                           value="{{ since }}" {% elif data %}value="{{ data.since }}" {% endif %}>
+                                    <label for="since" class="form-label">Date et heure de début</label>
+                                    <input type="datetime-local" id="since" name="since" class="form-control"
+                                            {% if since_time and since_date %}
+                                           value="{{ until_date }}T{{ since_time }}"
+                                                {% elif data %}{% if data.since %}
+                                           value="{{ data.since }}"
+                                                {% endif %}{% endif %}>
                                 </div>
                                 <div class="mb-3">
-                                    <label for="until" class="form-label">Heure de fin</label>
-                                    <input type="time" id="until" name="until" class="form-control"
-                                            {% if until %}
-                                           value="{{ until }}" {% elif data %}value="{{ data.until }}" {% endif %}>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="date" class="form-label">Date</label>
-                                    <input type="date" id="date" name="date" class="form-control"
-                                            {% if date %}
-                                           value="{{ date }}"{% endif %}
-                                           min="2000-01-01" max="2099-12-31">
+                                    <label for="until" class="form-label">Date et heure de fin</label>
+                                    <input type="datetime-local" id="until" name="until" class="form-control"
+                                            {% if until_time and until_date %}
+                                           value="{{ until_date }}T{{ until_time }}"
+                                                {% elif data %}{% if data.until %}
+                                           value="{{ data.until }}"
+                                                {% endif %}{% endif %}>
                                 </div>
                             </div>
                             <div class="col-sm-6">
                                 <div class="mb-3">
                                     <label for="description" class="form-label">Description</label>
-                                    {# WARNING: do not auto indent this file because textarea will be filled #}
-                                    {#          with whitespaces #}
+                                    {# WARNING: do not auto indent this file because for any new lines, even in comments, #}
+                                    {#          the textbox value gets modified with whitespaces #}
                                     <textarea id="description" name="description" class="form-control">{% if data %}{% if data.description %}{{ data.description }}{% endif %}{% endif %}</textarea>
                                 </div>
                                 <input type="submit" class="form-control bg-dark text-white"
