--- a/code/employee_mgmt_app/app/templates/task_form.html
+++ b/code/employee_mgmt_app/app/templates/task_form.html
@@ -41,7 +41,7 @@
                                     <label for="since" class="form-label">Date et heure de début</label>
                                     <input type="datetime-local" id="since" name="since" class="form-control" min="2000-01-01T00:0" max="2100-12-31T23:59"
                                             {% if since_time and since_date %}
-                                           value="{{ until_date }}T{{ since_time }}"
+                                           value="{{ since_date }}T{{ since_time }}"
                                                 {% elif data %}{% if data.since %}
                                            value="{{ data.since }}"
                                                 {% endif %}{% endif %}>
