flask-wtf poc start

--- a/code/employee_mgmt_app/app/templates/form_test.html
+++ b/code/employee_mgmt_app/app/templates/form_test.html
@@ -5,7 +5,9 @@
     <title>Form Test</title>
 </head>
 <body>
-{% block form %}
-{% endblock form %}
+<form action="">
+    {{ form.csrf_token }}
+    {{ form.project.label }} {{ form.project }}
+</form>
 </body>
 </html>
